<resources>
    <string name="app_name">Nexlink</string>
    <string name="title_appbar">Title Appbar</string>
    <string name="title_home">Home</string>
    <string name="title_chats">Chats</string>
    <string name="title_projects">Projects</string>
    <string name="title_profile">Profile</string>

    <string-array name="priority_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="status_array">
        <item>Active</item>
        <item>In Progress</item>
        <item>Cancelled</item>
        <item>Completed</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="date_month">Date - month</string>
    <string name="search_project">Search Project</string>
    <string name="add">Add</string>
    <string name="txt_all_project">All Project</string>
    <string name="txt_in_progress">In Progress</string>
    <string name="txt_done">Done</string>
    <string name="txt_start_date">Start Date</string>
    <string name="txt_end_date">End Date</string>
    <string name="txt_select_date">Select Date</string>
    <string name="txt_teammates">Teammates</string>
    <string name="txt_task">Task</string>
    <string name="txt_remove_teammate">Remove Teammate</string>
    <string name="txt_activity">Activities</string>
    <string name="txt_save">Save</string>
    <string name="txt_description">Description</string>
    <string name="txt_project_detail">Project Detail</string>
    <string name="txt_deadline">Deadline</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_login_with_google">Login With Google</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="txt_email">Email</string>
    <string name="len_password">Password must be at least 8 characters long</string>
    <string name="txt_name">Name</string>
    <string name="txt_fulle_name">Full Name</string>
    <string name="txt_sign_up_with_google">Sign Up With Google</string>
    <string name="alert_login_success">You have successfully logged in</string>
    <string name="wrong_email_and_password">Incorrect email or password.</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_update">Update</string>
    <string name="alert_signup_success">Your account has been created. Please login to continue.</string>
    <string name="txt_edit_project">Edit Project</string>
    <string name="txt_delete_project">Delete Project</string>
    <string name="txt_task_have_not_been_added_yet">Task have not been added yet</string>
    <string name="txt_teammates_have_not_been_added_yet">Teammates have not been added yet</string>
    <string name="txt_project_name">Project Name</string>
    <string name="txt_add_project">Add Project</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_add_teammates_and_task">Add Teammates and Task</string>
    <string name="txt_timeout_message">Request Timeout. Please try again.</string>
    <string name="txt_retry">Retry</string>
    <string name="txt_add_task">Add Task</string>
    <string name="txt_task_detail">Task Detail</string>
    <string name="txt_task_name">Task Name</string>
    <string name="txt_assign_to">Assign To</string>
    <string name="txt_priority">Priority</string>
    <string name="txt_delete_task">Delete Task</string>
    <string name="txt_edit_task">Edit Task</string>
    <string name="txt_btn_cancelled">Cancelled</string>
    <string name="txt_btn_pending">Pending</string>
    <string name="txt_date_format_datepicker">YYYY/MM/DD</string>
    <string name="txt_status">Status</string>
    <string name="txt_confirm_password">Confirm Password</string>
    <string name="txt_projects_not_found">No Data Projects Found, Please Add New Project</string>
    <string name="txt_add_user_task">Add User Task</string>
    <string name="txt_user_have_not_been_added_yet">User have not been added yet</string>
    <string name="txt_tasks_not_found">No Data Tasks Found, Please Add Task First</string>
    <string name="txt_update_profile">Update Profile</string>
</resources>