<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.projects.crud.EditProjectActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ToolbarStyle"
            app:navigationIcon="@drawable/ic_arrow_left_24dp">

            <TextView
                style="@style/ToolbarTitleStyle"
                android:text="@string/txt_edit_project"/>
        </androidx.appcompat.widget.Toolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary_main" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/txt_project_detail"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInput.Outline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_project_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_project_name"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInput.MultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tf_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:hint="@string/txt_description"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="3" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.App.TextInput.WithIcon.Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/txt_start_date"
                    app:helperText="@string/txt_date_format_datepicker">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tf_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.App.TextInput.WithIcon.Date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="@string/txt_end_date"
                    app:helperText="@string/txt_date_format_datepicker">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tf_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!-- Task Priority Input -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dropdown_status"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/txt_status"
                app:boxStrokeColor="@color/primary_main">

                <AutoCompleteTextView
                    android:id="@+id/select_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Teammates Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/txt_teammates"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_teammate"
                    style="@style/Widget.App.Button.WithIcon.AddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_teammates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:padding="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tv_no_teammates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/txt_teammates_have_not_been_added_yet"
                android:textColor="@color/paragraf"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <!-- Task Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/opensans_bold"
                    android:text="@string/txt_task"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_task"
                    style="@style/Widget.App.Button.WithIcon.AddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false"
                android:padding="8dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/tv_no_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:gravity="center"
                android:text="@string/txt_task_have_not_been_added_yet"
                android:textColor="@color/paragraf"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_marginBottom="16dp"
                tools:visibility="visible" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save_project"
                style="@style/Widget.App.Button.WithIcon.Save"
                android:layout_width="match_parent"
                android:text="@string/txt_update"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tf_description" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_anchor="@id/main"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>