<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.ui.profile.ProfileFragment">

    <!-- Profile Image -->
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile_image"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="40dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/CircleImageView"
        app:strokeColor="@color/primary_main"
        app:strokeWidth="4dp"
        tools:src="@tools:sample/avatars"/>


    <!-- Profile Name -->
    <TextView
        android:id="@+id/tv_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/opensans_bold"
        android:text="Ini Budi"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Profile Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_profile"
        style="@style/Widget.App.Button.Profile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_profile"
        app:icon="@drawable/ic_user"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

    <!-- Setting Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_setting"
        style="@style/Widget.App.Button.Profile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txt_setting"
        app:icon="@drawable/ic_setting"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

    <!-- Logout Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        style="@style/Widget.App.Button.Profile"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/txt_logout"
        app:icon="@drawable/ic_log_out"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />

</LinearLayout>